--- a/GroceryApp/GroceryApp/App/Base.lproj/Main.storyboard
+++ b/GroceryApp/GroceryApp/App/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BoA-sa-WHe">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yS0-mn-dHV">
                                     <size key="itemSize" width="128" height="128"/>
@@ -31,10 +31,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="BoA-sa-WHe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="546-sH-Vsc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BoA-sa-WHe" secondAttribute="trailing" id="5nM-2Y-NBx"/>
-                            <constraint firstItem="BoA-sa-WHe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Iom-Vf-K0y"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BoA-sa-WHe" secondAttribute="bottom" id="hoA-95-UyN"/>
+                            <constraint firstItem="BoA-sa-WHe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="VTV-0x-OmD"/>
+                            <constraint firstItem="BoA-sa-WHe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="el2-uV-wpk"/>
+                            <constraint firstAttribute="bottom" secondItem="BoA-sa-WHe" secondAttribute="bottom" id="mbm-sj-FPI"/>
+                            <constraint firstItem="BoA-sa-WHe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zEK-Ia-qo2"/>
                         </constraints>
                     </view>
                     <connections>
@@ -43,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="94"/>
+            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
         </scene>
     </scenes>
     <resources>
