--- a/GroceryApp/GroceryApp/Views/HeaderCell.xib
+++ b/GroceryApp/GroceryApp/Views/HeaderCell.xib
@@ -29,8 +29,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drake H." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCo-WV-GXC">
-                                <rect key="frame" x="28" y="82" width="95" height="29"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drake H. 👋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCo-WV-GXC">
+                                <rect key="frame" x="28" y="82" width="126" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="BDn-c1-MAU"/>
                                 </constraints>
