--- a/GroceryApp/GroceryApp/App/Base.lproj/Detail~.storyboard
+++ b/GroceryApp/GroceryApp/App/Base.lproj/Detail~.storyboard
@@ -26,6 +26,9 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="JMM-Ip-ac9"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -40,11 +43,28 @@
                     <navigationItem key="navigationItem" id="GIu-js-LIg"/>
                     <connections>
                         <outlet property="collectionView" destination="BoA-sa-WHe" id="voE-5j-n7I"/>
+                        <segue destination="5am-kD-ssF" kind="show" id="AKq-Y6-Umc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="944.92753623188412" y="93.75"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eRW-nH-IOg">
+            <objects>
+                <viewController id="5am-kD-ssF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5r6-OP-QjK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Mif-Zi-SE3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1yF-Pz-Lve"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I7C-CD-b9n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1677" y="100"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tp4-Uf-19d">
