--- a/GroceryApp/GroceryApp/Views/PromotionCell.xib
+++ b/GroceryApp/GroceryApp/Views/PromotionCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pp-As-EpX">
                         <rect key="frame" x="0.0" y="0.0" width="312" height="168"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oTI-fE-ueY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellow-and-red-tomatoes-on-cutting-board-ingredie-2022-10-03-22-28-55-utc 1" translatesAutoresizingMaskIntoConstraints="NO" id="oTI-fE-ueY">
                                 <rect key="frame" x="0.0" y="0.0" width="312" height="168"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                             </imageView>
@@ -88,6 +88,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="yellow-and-red-tomatoes-on-cutting-board-ingredie-2022-10-03-22-28-55-utc 1" width="318" height="168"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
