--- a/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
+++ b/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
@@ -3,7 +3,9 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,19 +21,90 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phV-7o-gah">
                         <rect key="frame" x="0.0" y="0.0" width="150" height="261"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="raw-chicken-drumsticks-2022-03-03-10-53-33-utc 1" translatesAutoresizingMaskIntoConstraints="NO" id="NVj-Zk-y7g">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="raw-chicken-drumsticks-2022-03-03-10-53-33-utc 1" translatesAutoresizingMaskIntoConstraints="NO" id="NVj-Zk-y7g">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="140"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="79h-ZQ-Yv0"/>
+                                </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="12"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chiken Village" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-P4-8Kv">
+                                <rect key="frame" x="21" y="144" width="108" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="6PR-DX-QiG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3EW-am-PWM">
+                                <rect key="frame" x="90" y="175" width="48" height="13"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Mpg-Wy-Dd8">
+                                        <rect key="frame" x="35" y="-0.5" width="13" height="13"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" systemColor="systemYellowColor"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(243)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qAX-VF-Kuo">
+                                        <rect key="frame" x="0.0" y="0.0" width="27" height="12"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="7Ed-gI-4Jt"/>
+                                    <constraint firstAttribute="height" constant="13" id="t5r-ZT-GAx"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rrF-g3-kXC">
+                                <rect key="frame" x="10" y="215" width="130" height="36"/>
+                                <color key="backgroundColor" name="ButtonColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="pFU-Ki-pu4"/>
+                                </constraints>
+                                <state key="normal" title="Add to Cart">
+                                    <color key="titleColor" name="ButtonTextColor"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 10.9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8o-Y6-3s0">
+                                <rect key="frame" x="11" y="173" width="40" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="9Kd-HG-y79"/>
+                                    <constraint firstAttribute="height" constant="17" id="gH0-Qj-quH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="I3f-P4-8Kv" firstAttribute="top" secondItem="NVj-Zk-y7g" secondAttribute="bottom" constant="4" id="5PX-7s-Yux"/>
+                            <constraint firstItem="I3f-P4-8Kv" firstAttribute="leading" secondItem="phV-7o-gah" secondAttribute="leading" constant="21" id="JPh-nn-pvJ"/>
+                            <constraint firstItem="G8o-Y6-3s0" firstAttribute="leading" secondItem="phV-7o-gah" secondAttribute="leading" constant="11" id="LdZ-zr-PBp"/>
+                            <constraint firstItem="NVj-Zk-y7g" firstAttribute="top" secondItem="phV-7o-gah" secondAttribute="top" id="ODN-Sx-0Kr"/>
                             <constraint firstAttribute="width" constant="150" id="OWI-8c-l9D"/>
+                            <constraint firstItem="3EW-am-PWM" firstAttribute="top" secondItem="I3f-P4-8Kv" secondAttribute="bottom" constant="11" id="SSc-Xr-5FF"/>
+                            <constraint firstAttribute="trailing" secondItem="NVj-Zk-y7g" secondAttribute="trailing" id="T2X-Th-vsn"/>
+                            <constraint firstItem="rrF-g3-kXC" firstAttribute="leading" secondItem="phV-7o-gah" secondAttribute="leading" constant="10" id="UCp-Zr-033"/>
+                            <constraint firstAttribute="trailing" secondItem="I3f-P4-8Kv" secondAttribute="trailing" constant="21" id="Ynx-Ei-67X"/>
+                            <constraint firstAttribute="bottom" secondItem="rrF-g3-kXC" secondAttribute="bottom" constant="10" id="fPO-jH-iLn"/>
+                            <constraint firstAttribute="trailing" secondItem="rrF-g3-kXC" secondAttribute="trailing" constant="10" id="gRa-QD-Squ"/>
+                            <constraint firstAttribute="trailing" secondItem="3EW-am-PWM" secondAttribute="trailing" constant="12" id="jVn-wR-iV5"/>
                             <constraint firstAttribute="height" constant="261" id="oyW-b2-l6z"/>
+                            <constraint firstItem="G8o-Y6-3s0" firstAttribute="top" secondItem="I3f-P4-8Kv" secondAttribute="bottom" constant="9" id="sSX-YV-gxS"/>
+                            <constraint firstItem="NVj-Zk-y7g" firstAttribute="leading" secondItem="phV-7o-gah" secondAttribute="leading" id="xZr-fO-9pC"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -44,10 +117,20 @@
                 <constraint firstAttribute="trailing" secondItem="phV-7o-gah" secondAttribute="trailing" id="pN2-9D-F87"/>
             </constraints>
             <size key="customSize" width="150" height="261"/>
-            <point key="canvasLocation" x="107.24637681159422" y="174.44196428571428"/>
+            <point key="canvasLocation" x="56.521739130434788" y="167.07589285714286"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="raw-chicken-drumsticks-2022-03-03-10-53-33-utc 1" width="150" height="140"/>
+        <image name="star.fill" catalog="system" width="128" height="116"/>
+        <namedColor name="ButtonColor">
+            <color red="0.78431372549019607" green="0.92941176470588238" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ButtonTextColor">
+            <color red="0.0078431372549019607" green="0.45098039215686275" blue="0.20784313725490197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
