Messing with colors
color making

--- a/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
+++ b/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
@@ -32,7 +32,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chiken Village" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-P4-8Kv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chicken Village" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3f-P4-8Kv">
                                 <rect key="frame" x="21" y="144" width="108" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="6PR-DX-QiG"/>
