--- a/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
+++ b/GroceryApp/GroceryApp/Views/PopularDealsCell.xib
@@ -85,7 +85,7 @@
                                     <constraint firstAttribute="height" constant="17" id="gH0-Qj-quH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="DealColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -128,6 +128,9 @@
         </namedColor>
         <namedColor name="ButtonTextColor">
             <color red="0.0078431372549019607" green="0.45098039215686275" blue="0.20784313725490197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="DealColor">
+            <color red="0.76078431372549016" green="0.61176470588235299" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
