--- a/GroceryApp/GroceryApp/Views/CategoriesItemsCell.xib
+++ b/GroceryApp/GroceryApp/Views/CategoriesItemsCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Cd-rD-Hzo">
                         <rect key="frame" x="0.0" y="0.0" width="91" height="90"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JtK-SG-Qzs">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MiniGrape" translatesAutoresizingMaskIntoConstraints="NO" id="JtK-SG-Qzs">
                                 <rect key="frame" x="36" y="16" width="19" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="oof-Ou-sTs"/>
@@ -83,6 +83,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="MiniGrape" width="19" height="22.5"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
